--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -5,7 +5,7 @@
   <h1>500</h1>
   <h2>Internal Server Error</h2>
   <p>Something went wrong on our end. Please try again later.</p>
-  <a href="{{ url_for('index') if current_user else url_for('login') }}" class="btn btn-primary">Go Home</a>
+  <a href="{{ url_for('login') }}" class="btn btn-primary">Go to Login</a>
 </div>
 {% endblock %}
 
